--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,8 +3,12 @@ name: Publish in DockerHub
 on:  
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,3 +25,21 @@ jobs:
         run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}" 
       - name: Push image to DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/anuncios:v1
+  deploy:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: 'Az CLI login'
+          uses: azure/login@v2
+          with:
+              client-id: ${{ secrets.AZURE_CLIENT_ID }}
+              tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+              subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        - name: 'Run az commands to deploy container'
+          run: |
+            az container create \
+            --resource-group ${{ secrets.AZURE_GROUP }} \
+            --name anuncios \
+            --image ${{ secrets.DOCKERHUB_USERNAME }}/anuncios:latest \
+            --dns-name-label ais-anuncios \
+            --ports 8080
